[update]viewを少しいじった

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h1>マイページ</h1>
+<p>マイページ表示できる様にする</p>
+<p>名前・カタカナ・アドレス・投稿数が出る様にする。</p>
